--- a/PRACTICE/HTMLPrj/src/main/webapp/hr/employee/insert.html
+++ b/PRACTICE/HTMLPrj/src/main/webapp/hr/employee/insert.html
@@ -13,8 +13,8 @@
 			</tr>
 			<tr>
 				<th>이름</th>
-				<td><input type="text" name="firstName" placeholder="First Name">
-				<input type="text" name="lastName" placeholder="Last Name"></td>
+				<td><input type="text" name="firstName" size="7" placeholder="First Name">
+				<input type="text" name="lastName" size="7" placeholder="Last Name"></td>
 			</tr>
 			<tr>
 				<th>이메일</th>
@@ -26,7 +26,7 @@
 			</tr>
 			<tr>
 				<th>입사일</th>
-				<td><input type="date" name="hireDate"></td>
+				<td><input type="date" name="hireDate" max="2024-04-05"></td>
 			</tr>
 			<tr>
 				<th>직무</th>
@@ -34,11 +34,11 @@
 			</tr>
 			<tr>
 				<th>급여</th>
-				<td><input type="text" name="salary"></td>
+				<td><input type="number" name="salary" min="0" max="20000" step="0.01"></td>
 			</tr>
 			<tr>
 				<th>보너스</th>
-				<td><input type="text" name="commissionPct"></td>
+				<td><input type="number" name="commissionPct" min="0.0" max="0.99" step="0.01"></td>
 			</tr>
 			<tr>
 				<th>매니저ID</th>
